tests/miniJava/neg/002960_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = this public int [] java ( ) { return 0 ; } ; } }
